--- a/binary/index.html
+++ b/binary/index.html
@@ -11,5 +11,11 @@
 </head>
 
 <body>
+  <!  team proj w Josh & Ripley >
+<p>
+  Instructions:  <br><br>
+ click & hold mouse button <br>
+  & hover  mouse  on x  & y axis <br>  
+  to  generate words in-between  "❌"  & "✅"
 </body>
 </html>
